<resources>
    <string name="app_name">Pokemon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teamFightFragment">com.example.pokemon:id/bagFragment</string>
    <string name="potionFragment">com.example.pokemon:id/fightMenuFragment</string>
    <string name="apply">Apply</string>
    <string name="go_back">Go Back</string>
    <string name="remove_pokemon_fragment">com.example.pokemon:id/teamRemovePokemonFragment</string>
    <string name="add_pokemon_fragment">com.example.pokemon:id/teamAddPokemonFragment</string>
    <string name="team_fragment">com.example.pokemon:id/teamFragment</string>
    <string name="view_collection_fragment">com.example.pokemon:id/viewCollectionFragment</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_pokecenter">Go to pokecenter</string>
    <string name="go_to_teams">Go to teams</string>
    <string name="go_to_wild_battle">Go to wild battle</string>
    <string name="go_to_trainer_battle">Go to trainer battle</string>
    <string name="save">Save</string>
    <string name="main_menu">Main Menu</string>
    <string name="add_team">Add Team</string>
    <string name="remove_team">Remove Team</string>
    <string name="change_order">Change Order</string>
    <string name="view_collection">View Collection</string>
    <string name="go_to_main_menu">Go to Main Menu</string>
    <string name="intro_text">Hello there!\nWelcome to the world of Pokemon!\nThis world is inhabited by creatures called Pokemon.\nFor some people, Pokemon are pets. Some study them.\nOthers use them for fights.</string>
    <string name="username_text">What is your name?</string>
    <string name="starter_text">Choose your starter Pokemon.</string>
    <string name="nickname_text">What is your Pokemon\'s nickname?</string>
    <string name="nickname_input_hint">Leave this blank for default name</string>
    <string name="ready_text">Your very own Pokemon legend is about to unfold.\nA world of dreams and adventures with Pokemon awaits!\nAre you ready?</string>
    <string name="ready">Ready</string>
    <string name="pokemon_name">Enter pokemon name:</string>
    <string name="new_game">New Game</string>
    <string name="members_text">Game created by:\n\nDan Willis\nJohnny Hoang\nRobert Gutkowski</string>
    <string name="pokemon_sprite">Pokemon\'s Sprite</string>
    <string name="fight_menu_navigation">Destination(com.example.pokemon:id/fightMenuFragment) label=fragment_fight_menu class=com.example.pokemon.fight.FightMenuFragment</string>
    <string name="image_view_desc">Image of Pokemon</string>
    <string name="view_pokedex_entry">Select pokemon to view their Pokedex entry</string>
    <string name="heal">Heal</string>
    <string name="pokecenter_building">Pokecenter building</string>
    <string name="pokecenter">POKECENTER</string>
    <string name="moves">Moves</string>
    <string name="continue_game">continue</string>
    <string name="pokeball">Pokéball</string>
    <string name="potion">Potion</string>
    <string name="back">Back</string>
    <string name="pokemon_upper">POKÉMON</string>
    <string name="run">RUN</string>
    <string name="fight">FIGHT</string>
    <string name="bag">BAG</string>
</resources>