<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.TeamFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addTeam"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/add_team"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/pokemon_team_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/removeTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_team"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addTeam"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/changeOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_order"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/removeTeam"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/viewCollection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_collection"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changeOrder"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/TeamGoToMainMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go_to_main_menu"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewCollection" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/view_pokedex_entry"
                android:layout_gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pokemon_team_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="10dp"/>
        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>