<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/pokemonLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pokemon_logo"
            android:layout_marginHorizontal="20dp"
            />

        <TextView
            android:id="@+id/introText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_text"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_text"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/starterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starter_text"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/bulbasaurImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bulbasaur"
                />
            <ImageView
                android:id="@+id/charmanderImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/charmander"
                />
            <ImageView
                android:id="@+id/squirtleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/squirtle"
                />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/starterRButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >
            <RadioButton
                android:id="@+id/bulbasaurRBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:minWidth="0dp"
                android:layout_marginHorizontal="30dp"
                />
            <RadioButton
                android:id="@+id/charmanderRBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:minWidth="0dp"
                android:layout_marginHorizontal="30dp"
                />
            <RadioButton
                android:id="@+id/squirtleRBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:minWidth="0dp"
                android:layout_marginHorizontal="30dp"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/nicknameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname_text"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            />

        <EditText
            android:id="@+id/nicknameInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="12sp"
            android:hint="@string/nickname_input_hint"
            />

        <TextView
            android:id="@+id/readyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ready_text"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/IntroGoToMainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ready"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

</ScrollView>